5.0-alpha2
Merged from 4.1:
Merged from 4.0:
Merged from 3.11:
Merged from 3.0:
 * Make alternation of a user type validate the same way as creation of a user type does (CASSANDRA-18585)

5.0-alpha1
 * Expose bootstrap failure state via JMX and nodetool info (CASSANDRA-18749)
 * Reduce size of per-SSTable index components for SAI (CASSANDRA-18673)
 * Remove unnecessary Netty dependencies after upgrade to version 4.1.96 (CASSANDRA-18729)
 * Prevent InaccessibleObjectException when the Leak Detector is traversing objects (CASSANDRA-18708)
 * Remove legacy command line options from cassandra-stress (CASSANDRA-18529)
 * Remove commitlog_sync_batch_window_in_ms (CASSANDRA-17161)
 * Upgrade JMH from 1.21 to 1.36 (CASSANDRA-18696)
 * Add guardrail for vector dimensions (CASSANDRA-18730)
 * Upgraded Netty to 4.1.96, added BouncyCastle dependency (CASSANDRA-17992)
 * Fix for (unsupported) big endian unaligned architecture, eg s390x (CASSANDRA-17723)
 * CIDR filtering authorizer (CASSANDRA-18592)
 * Remove 3.x from the versions checked for prepared statement behaviour (CASSANDRA-18695)
 * Add vector similarity functions (CASSANDRA-18640)
 * Lift MessagingService.minimum_version to 40 (CASSANDRA-18314)
 * Introduce pluggable crypto providers and default to AmazonCorrettoCryptoProvider (CASSANDRA-18624)
 * Improved DeletionTime serialization (CASSANDRA-18648)
 * CEP-7: Storage Attached Indexes (CASSANDRA-16052)
 * Add equals/hashCode override for ServerEncryptionOptions (CASSANDRA-18428)
 * Upgrade ECJ to version 3.33.0 (CASSANDRA-18190)
 * Fix ClassCastException  from jdk GaloisCounterMode when using JDK17 provider (CASSANDRA-18180)
 * Drop JDK8, add JDK17 (CASSANDRA-18255)
 * Remove WaitingOnFreeMemtableSpace and DroppedMutations metrics (CASSANDRA-18298)
 * Upgrade Jamm version to 0.4.0  (CASSANDRA-17884, CASSANDRA-16304, CASSANDRA-18329)
 * Remove legacy 3.0/3.11 buffer pool metrics (CASSANDRA-18313)
 * Add AzureSnitch (CASSANDRA-18646)